first practice with links

--- a/contacto.html
+++ b/contacto.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universidad HTML</title>
+    <title>Contacto</title>
 </head>
 <body>
-    <h1>Universidad HTML</h1>
+    <h1>Contacto GlobalMentoring.com.mx</h1>
     <hr>
     <div>
-        <a href="Index.html">Inicio |</a>
-        <a href="contacto.html"> Contacto |</a>
-        <a href="Acercade.html"> Acerca De</a>
+        <p>Pagina de contacto</p>
+        <a href="https://www.facebook.com" target="_blank">Facebook de GlobalMentoring.com.mx</a>
     </div>
     <div>
-        <p>Benvenido al curso de Universidad HTML</p>
+        <a href="index.html">Inicio</a>
     </div>
 </body>
 </html>
