--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li class="li1"><a href="Acercade.html">Acerca de</a></li>
     </ul>
 
-    <h1>Tablas en html</h1>
+    <h1 class="titulo">Tablas en html</h1>
     
     <table>
         <caption>Listado de personas</caption>
@@ -47,7 +47,7 @@
         
     </table>
 
-    <h2>unorder lists</h2>
+    <h2 class="titulo">unorder lists</h2>
     <ul>
         <li>first item</li>
         <li>second item</li>
@@ -73,6 +73,27 @@
         <dd>Creator</dd>
         <dd>Guido van rouse</dd>
    </dl>
+
+   <div>
+        <h2>div</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nam eveniet ipsum enim doloremque dolores maiores libero vero, deleniti, consequuntur nostrum numquam quidem beatae asperiores, laborum ullam facere quam rem.</p>
+   </div>
+
+   <h2 class="titulo">Formularios</h2>
+   
+   <form action="" >
+        <label for="name">Nombre: </label><br>
+        <input type="text" name="name" id="name" placeholder="Enter your name" required="true">
+        <br>
+        <label for="last-name">Last Name: </label><br>
+        <input type="text" name="last-name" id="last-name" placeholder="Enter your last name" required="true"><br>
+        <input type="radio" name="femenino" id="femenino" value="femenino">
+        <label for="femenino">Femenino</label>
+        </label>
+        <br>
+        <input type="submit" value="Submit">
+
+   </form>
 
 </body>
 </html>
